# so101-robot

./: .gitignore  AGENTS.md  CAMERA-RESEARCH-REPORT.md  CITATION.cff  COSTS.md  DECISIONS.md  LICENSE  README.md  RESEARCH-RESUME.md  RETRO.md  lerobot-macos-setup-guide.md  pyproject.toml
configs/: camera_preflight.json  evaluation.json  experiment_manifest.example.json  gripper_doe.json  gym_hil_record.json  isaac_vastai_spike.json  material_experiment_manifest.example.json  material_manifest.example.csv  material_sensor.json  perception.json  perception_blind_labels.example.csv  perception_capture_settings.example.json  perception_pilot_ids.example.csv  perception_split_assignments.example.csv  rollout.json  train_act.json  train_smolvla.json  transfer_gate_evidence.example.json  transfer_tasks.json  vastai_dryrun.md
docs/: 01-vietnam-applications.md  02-project-gaps.md  03-pre-arrival-training-plan.md  04-arrival-assembly-setup-guide.md  HANDOFF.md  arrival_day_checklist.md  capture_rig_setup.md  data_and_labeling.md  evaluation_protocol.md  execution_and_portfolio.md  hardware_and_safety.md  material_sensing_protocol.md  perception_collection.md  pilot_capture_kickoff_prompt.md  pilot_v3_kickoff_prompt.md  runbook.md  transfer_training_roadmap.md  vietnam_applications.md
notebooks/: perception_colab_smoke.ipynb
notes/: camera-research-scoping.md  dataset_study_svla_so101_pickplace.md  roastery-call-script.md  sim_record_controls.md
patches/: lerobot-v0.6.0-macos-serial-encoding.patch
results/: README.md
skills/: README.md
src/: camera_check.py  inference_smoke_test.py  pilot_capture_runner.py  pilot_draw_runner.py  pilot_grading_runner.py  press_test_preview.py
tests/: test_act_training.py  test_camera_attestation.py  test_camera_preflight.py  (+19 more)
(+53 files in other folders)
